erDiagram
    Usuario{
        int IdUsuario PK
        str Email
        str Nombre
        str Contrasena
        int Numero_telefono
        string estado
        date fechainicio
    }

    Plan{
        int IdPlan PK 
        str detalle
    }

    Caracteristicas{
        int idCaracteristicas PK
        str caracteristicas
    }

    Tipo_plan{
        int IdTipoplan PK
        str tipo_plan
    }

    Tarjeta{
        int IdTarjeta PK
        str NombreTitular
        str ApellidoTitular
        int NumTarjeta
        date FechaVencimiento
        int CodigoSeguridad
        int IdTipoTarjeta FK
        int NumAutorizacionTarjeta
    }

    TipoTarjeta{
        int IdTipoTarjeta PK
        str descripcion
    }

    Suscripcion{
        int idSuscripcion PK
        date FechaSuscripcion
        boolean SusActiva
        int IdPlan FK
        int IdUsuario FK
        int IdTarjeta FK
    }

    UsuarioxSuscripcion{
    int IdUsuarioxSuscripcion PK
    int IdUsuarioxsuscripcion PK
    int IdUsuario FK
    int idSuscripcion FK
    str detalle
    }

    Planxcaracteristicas{
        int IdPlan_caracteristicas PK
        int IdPlan FK
        int idCaracteristicas FK
        boolean Activa
        str detalle
    }

    Usuario ||--|{ UsuarioxSuscripcion: tiene
    Suscripcion ||--|{ UsuarioxSuscripcion: tiene
    Plan ||--|{ Planxcaracteristicas: tiene
    Caracteristicas ||--|{ Planxcaracteristicas: tiene
    Suscripcion ||--|| Tarjeta: tiene
    Suscripcion }|--|| Plan: tiene
    Tarjeta }|--||  TipoTarjeta: tiene
    Plan }|--|| Tipo_plan: tiene
    Usuario ||--|| Tarjeta: tiene